# pmml-zoo

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/: app.py  pmmlzoo.py
src/openapi/: linear-regression.yml  random-forest.yml
