[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "A Python project template"
authors = ["Rui Vieira <ruidevieira@googlemail.com>"]
license = "AGPL3.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "*"
pylint = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
