[tool.poetry]
name = "pmml-zoo"
version = "0.1.0"
description = "PMML Zoo"
authors = ["Rui Vieira <ruidevieira@googlemail.com>"]
license = "AGPL3.0"

[tool.poetry.dependencies]
python = "^3.6.8"
Flask = "^1.1.2"
scikit-learn = "^0.23.2"
pandas = "^1.1.4"
nyoka = "^4.3.0"
flasgger = "^0.9.5"

[tool.poetry.dev-dependencies]
mypy = "*"
pylint = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
